# gororoba_app

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  REQUIREMENTS.md  agents.md  claude.md  gemini.md
.cargo/: config.toml
apps/mobile_spike/: ARCHITECTURE.md  README.md
apps/mobile_spike/android/: README.md
apps/mobile_spike/contracts/: shared_core_contract.json
apps/mobile_spike/ios/: README.md
apps/physics_sandbox/: Cargo.toml
apps/physics_sandbox/assets/: app.css  app.js
apps/physics_sandbox/src/: main.rs
apps/physics_sandbox/templates/: index.html
apps/studio_web/: Cargo.toml
apps/studio_web/assets/: app.css  app.js
apps/studio_web/src/: app.rs  client.rs  main.rs  models.rs  views.rs
apps/studio_web/templates/: base.html  error.html  index.html  pipeline.html
apps/synthesis_arena/: Cargo.toml
apps/synthesis_arena/assets/: app.css  app.js
apps/synthesis_arena/src/: main.rs
apps/synthesis_arena/templates/: index.html
crates/gororoba_bevy_algebra/: Cargo.toml
crates/gororoba_bevy_algebra/src/: components.rs  lib.rs  resources.rs  systems.rs
crates/gororoba_bevy_core/: Cargo.toml
crates/gororoba_bevy_core/src/: camera.rs  hud.rs  input.rs  lib.rs  pedagogy.rs
crates/gororoba_bevy_game_semantics/: Cargo.toml
crates/gororoba_bevy_game_semantics/src/: arena.rs  components.rs  composition.rs  conditions.rs  levels.rs  lib.rs  payoff.rs  resources.rs  strategy.rs  systems.rs
crates/gororoba_bevy_gr/: Cargo.toml
crates/gororoba_bevy_gr/src/: components.rs  lib.rs  resources.rs  systems.rs
crates/gororoba_bevy_lbm/: Cargo.toml
crates/gororoba_bevy_lbm/src/: components.rs  compute_bridge.rs  lib.rs  resources.rs  soa_solver.rs  systems.rs
crates/gororoba_bevy_quantum/: Cargo.toml
crates/gororoba_bevy_quantum/src/: components.rs  lib.rs  resources.rs  systems.rs
crates/gororoba_kernel_algebra/: Cargo.toml
crates/gororoba_kernel_algebra/src/: lib.rs
crates/gororoba_kernel_api/: Cargo.toml
crates/gororoba_kernel_api/src/: lib.rs
crates/gororoba_kernel_fluid/: Cargo.toml
crates/gororoba_kernel_fluid/src/: lib.rs
crates/gororoba_kernel_fluid_cuda/: Cargo.toml
crates/gororoba_kernel_fluid_cuda/src/: lib.rs
crates/gororoba_kernel_fluid_vulkan/: Cargo.toml
crates/gororoba_kernel_fluid_vulkan/src/: lib.rs
crates/gororoba_kernel_gr/: Cargo.toml
crates/gororoba_kernel_gr/src/: lib.rs
crates/gororoba_kernel_quantum/: Cargo.toml
crates/gororoba_kernel_quantum/src/: lib.rs
crates/gororoba_shared_core/: Cargo.toml
crates/gororoba_shared_core/src/: lib.rs
docs/: APP_FRONTEND_OPTION_PORTFOLIO.md  APP_PURPOSE_AND_AUDIENCES.md  BEVY_HEAVY_TESTS.md  CROSS_REPO_INTERFACE_POLICY.md  DEPENDENCY_REFERENCE.md  DESKTOP_PACKAGING_LANE.md  GAME_ARCHITECTURE.md  GAME_LICENSE_POLICY.md  OPEN_GOROROBA_BACKEND_ALIGNMENT_HANDOFF.md  engine_optimizations.md
docs/requirements/: algebra.md  fluid.md  fluid_cuda.md  fluid_vulkan.md  gr.md  quantum.md
games/fluid_dynamics/: Cargo.toml
games/fluid_dynamics/src/: aerodynamics.rs  egui_test.rs  main.rs  scenarios.rs  states.rs  ui.rs  vehicle.rs
games/interaction_arena/: Cargo.toml
games/interaction_arena/src/: builder.rs  execution.rs  lib.rs  main.rs  states.rs  ui.rs
games/non_euclidean/: Cargo.toml
games/non_euclidean/src/: main.rs  portals.rs  puzzles.rs  rooms.rs  states.rs  strategy_mode.rs  ui.rs
games/quantum_builder/: Cargo.toml
games/quantum_builder/src/: lattice_editor.rs  main.rs  measurement.rs  nanostructure.rs  states.rs  ui.rs
games/relativistic_space/: Cargo.toml
games/relativistic_space/assets/luts/: emissivity_lut.csv  grb_modulation_lut.csv  grb_modulation_meta.json  hawking_meta.json  hawking_spectrum_lut.csv  hawking_temp_lut.csv  lut_meta.json  redshift_lut.csv  spin_radii_lut.csv
games/relativistic_space/assets/validation/: metrics.json  redshift_curve.csv
games/relativistic_space/shaders/: blackhole_main.wgsl  geodesic_trace.wgsl  hawking_glow.wgsl  kerr.wgsl  physics_constants.wgsl  redshift.wgsl
games/relativistic_space/src/: blackhole_material.rs  celestial.rs  lut_loader.rs  main.rs  spacecraft.rs  states.rs  ui.rs  validation.rs
patches/naga-27.0.3/src/: lib.rs
patches/naga-27.0.3/src/back/spv/: helpers.rs
plans/: CROSS_REPO_EXECUTION_STRATEGY_2026_02_13.toml  ULTRA_ROADMAP_2026_02_13.toml
scripts/: cargo-isolated.sh  generate_mobile_contract.sh  package_desktop_matrix.sh
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
