[package]
name = "gororoba_studio_web"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
askama.workspace = true
axum.workspace = true
gororoba_shared_core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding.workspace = true

[dev-dependencies]
tower.workspace = true
