[package]
name = "synthesis_arena"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
askama.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tower.workspace = true
