[package]
name = "gororoba_bevy_algebra"
version.workspace = true
edition.workspace = true
license = "GPL-2.0-only"
publish = false
description = "Cayley-Dickson algebra as a Bevy plugin"

[dependencies]
bevy.workspace = true
gororoba_kernel_api = { path = "../gororoba_kernel_api" }
gororoba_kernel_algebra = { path = "../gororoba_kernel_algebra" }
