[package]
name = "gororoba_bevy_gr"
version.workspace = true
edition.workspace = true
license = "MIT"
publish = false
description = "General relativity as a Bevy plugin"

[dependencies]
bevy.workspace = true
gororoba_bevy_core = { path = "../gororoba_bevy_core" }
gr_core.workspace = true
cosmology_core.workspace = true
