[package]
name = "gororoba_bevy_gr"
version.workspace = true
edition.workspace = true
license = "MIT"
publish = false
description = "General relativity as a Bevy plugin"

[dependencies]
bevy.workspace = true
gororoba_kernel_api = { path = "../gororoba_kernel_api" }
gororoba_kernel_gr = { path = "../gororoba_kernel_gr" }
