[package]
name = "gororoba_bevy_lbm"
version.workspace = true
edition.workspace = true
license = "GPL-2.0-only"
publish = false
description = "LBM physics wrapped as a Bevy plugin"

[dependencies]
ash.workspace = true
bevy.workspace = true
gororoba_bevy_core = { path = "../gororoba_bevy_core" }
lbm_vulkan.workspace = true
lbm_3d.workspace = true
lbm_core.workspace = true
rayon.workspace = true
