[package]
name = "gororoba_bevy_lbm"
version.workspace = true
edition.workspace = true
license = "GPL-2.0-only"
publish = false
description = "LBM physics wrapped as a Bevy plugin"

[features]
default = []
fluid-vulkan = ["dep:gororoba_kernel_fluid_vulkan"]
fluid-cuda = ["dep:gororoba_kernel_fluid_cuda"]

[dependencies]
bevy.workspace = true
gororoba_kernel_api = { path = "../gororoba_kernel_api" }
gororoba_kernel_fluid = { path = "../gororoba_kernel_fluid" }
gororoba_kernel_fluid_vulkan = { path = "../gororoba_kernel_fluid_vulkan", optional = true }
gororoba_kernel_fluid_cuda = { path = "../gororoba_kernel_fluid_cuda", optional = true }
