[package]
name = "gororoba_bevy_quantum"
version.workspace = true
edition.workspace = true
license = "GPL-2.0-only"
publish = false
description = "Quantum mechanics and Casimir effect as a Bevy plugin"

[dependencies]
bevy.workspace = true
gororoba_bevy_core = { path = "../gororoba_bevy_core" }
quantum_core.workspace = true
casimir_core.workspace = true
spin_tomography_core.workspace = true
