[package]
name = "gororoba_bevy_quantum"
version.workspace = true
edition.workspace = true
license = "GPL-2.0-only"
publish = false
description = "Quantum mechanics and Casimir effect as a Bevy plugin"

[dependencies]
bevy.workspace = true
gororoba_kernel_api = { path = "../gororoba_kernel_api" }
gororoba_kernel_quantum = { path = "../gororoba_kernel_quantum" }
