[package]
name = "gororoba_kernel_fluid_vulkan"
version.workspace = true
edition.workspace = true
license = "GPL-2.0-only"
publish = false
description = "Local Vulkan capability probing and backend surface for gororoba_app fluid kernels"

[dependencies]
ash.workspace = true
gororoba_kernel_api = { path = "../gororoba_kernel_api" }
gororoba_kernel_fluid = { path = "../gororoba_kernel_fluid" }
