[package]
name = "gororoba_kernel_quantum"
version.workspace = true
edition.workspace = true
license = "GPL-2.0-only"
publish = false
description = "Local quantum kernel interfaces and CPU implementation for gororoba_app"

[dependencies]
gororoba_kernel_api = { path = "../gororoba_kernel_api" }
quantum_core.workspace = true
casimir_core.workspace = true
spin_tomography_core.workspace = true
